# contact_graspnet_ros2

./: CMakeLists.txt  README.md  package.xml
backup/: CMakeLists (Copy).txt  build_py10.sh
backup/contact_graspnet_discarded/contact_graspnet/: config_utils.py  data.py
backup/contact_graspnet_discarded/docker/: Dockerfile
backup/contact_graspnet_discarded/pointnet2/tf_ops/grouping/: compile.sh  tmp_err1.txt
backup/contact_graspnet_discarded/pointnet2/tf_ops/grouping/backup/: compile (Copy 2).sh
backup/contact_graspnet_discarded/pointnet2/tf_ops/grouping/backup/compiled_key_error/: note.txt  tf_grouping.cpp
backup/contact_graspnet_discarded/pointnet2/tf_ops/sampling/: compile.sh
backup/contact_graspnet_discarded/pointnet2/tf_ops/sampling/backup/: tf_sampling (Copy 2).cpp  tf_sampling (Copy).cpp  tmp_cmp_err2.txt  tmp_cmp_err5.txt
backup/contact_graspnet_discarded/pointnet2/tf_ops/sampling/backup/workable_no_gpu/: compile.sh
backup/contact_graspnet_discarded/pointnet2/utils/: pointnet_util.py
backup/contact_graspnet_discarded/robot/: dump_pointcloud.py  grasp.py  grasping_using_docker.py
checkpoints/scene_test_2048_bs3_hor_sigma_001/: config.yaml
contact_graspnet/: README.md  environment.yaml
contact_graspnet/contact_graspnet/: config_utils.py  contact_graspnet.py  data.py  flask_inference_server.py  inference.py  visualization_utils.py
contact_graspnet/pointnet2/: __init__.py
contact_graspnet/pointnet2/tf_ops/grouping/: temp_compile_error.txt  tmp_err2.txt  tmp_err3.txt
contact_graspnet/pointnet2/tf_ops/grouping/backup/: tf_grouping_g (Copy 2).cu
contact_graspnet/pointnet2/tf_ops/sampling/: 1.pkl  compile.sh  tf_sampling.cpp
contact_graspnet/pointnet2/tf_ops/sampling/backup/: tmp_cmp_err.txt  tmp_cmp_err3.txt  tmp_cmp_err4.txt  tmp_cmp_err6.txt  tmp_cmp_err7.txt  tmp_cmp_err8.txt
contact_graspnet/pointnet2/tf_ops/sampling/backup/workable_no_gpu/: compile (Copy).sh
contact_graspnet/test_data/: scene_live.npy
contact_graspnet_docker/: Dockerfile  docker_run.sh  docker_run_cgn_only.sh  result_inspector.py  result_plotter.py  result_san_check.py
contact_graspnet_docker/backup/: Dockerfile_UCN  docker_run_cgn_pls_ucn.sh
contact_graspnet_docker/backup/standalone_cgnet_docker/: Dockerfile  docker_run (Copy).sh
contact_graspnet_ros2/: client_grasp_request.py  grasp_executor_local_server.py  grasp_executor_server.py  grasp_loader_server.py  grasp_server.py  pointnet2_grasp_direct.py
contact_graspnet_ros2/backup/: grasp_execute_load_server.py  grasp_server (Copy).py
contact_graspnet_ros2/temp/: inference_output_scene1.txt  inference_output_scene11.txt  inference_output_scene3.txt  inference_output_scene6.txt
launch/: grasp_loader_server.launch.py  grasp_server.launch.py
msg/: Grasps.msg
resource/: pythonpath.dsv.in
srv/: GetGrasps.srv
